--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<div class="footer-section">
+    <div class="footer-line"></div>
+    <div class="footer-logo-and-social">
+        <img src="../../assets/logo.png" alt="">
+        <p>© Gloria Schaffarczyk 2024</p>
+        <div class="footer-social-media-links">
+            <img src="../../assets/intro-icon-github.png" alt="">
+            <img src="../../assets/intro-icon-email.png" alt="">
+            <img src="../../assets/intro-icon-linkedin.png" alt="">
+        </div>
+    </div>
+    <div class="footer-imprint"><p>Imprint</p></div>
+</div>
+
